fix CCE and cleanup

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1974,7 +1974,7 @@ externalizable.without.public.no.arg.constructor.problem.descriptor=Externalizab
 make.constructor.public=Make constructor 'public'
 string.concatenation.missing.whitespace.display.name=String literal concatenation missing whitespace
 string.concatenation.missing.whitespace.problem.descriptor=String literal concatenation missing whitespace #loc
-string.concatenation.missing.whitespace.option=Ignore when not both sides are string literals
+string.concatenation.missing.whitespace.option=Ignore when one or both sides are not string literals
 negated.equality.expression.display.name=Negated equality expression
 negated.equality.expression.problem.descriptor=Negating ''{0}'' #loc
 negated.equality.expression.quickfix=Remove negation
