--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1026,8 +1026,11 @@ notify.not.in.synchronized.context.problem.descriptor=Call to <code>#ref()</code
 thread.run.problem.descriptor=Calls to <code>#ref()</code> should probably be replaced with 'start()' #loc
 thread.start.in.construction.problem.descriptor=Call to <code>#ref</code> during object construction #loc
 synchronize.on.lock.problem.descriptor=Synchronization on a ''{0}'' object is unlikely to be intentional #loc
-synchronized.on.literal.object.descriptor=Synchronization on {0} <code>#ref</code> which is initialized by a literal #loc
+synchronized.on.literal.object.problem.descriptor=Synchronization on {0} <code>#ref</code> which is initialized by a literal #loc
+synchronized.on.direct.literal.object.problem.descriptor=Synchronization on {0} literal <code>#ref</code> #loc
+synchronized.on.possibly.literal.object.problem.descriptor=Synchronization on {0} <code>#ref</code> #loc
 synchronize.on.non.final.field.problem.descriptor=Synchronization on a non-final field <code>#ref</code> #loc
+synchronized.on.literal.object.warn.on.all.option=Warn on all possible literals
 synchronize.on.this.problem.descriptor=Lock operations on 'this' may have unforeseen side-effects #loc
 nested.synchronized.statement.problem.descriptor=Nested <code>#ref</code> statement #loc
 empty.synchronized.statement.problem.descriptor=Empty <code>#ref</code> statement #loc
