--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula.properties
@@ -3,53 +3,53 @@ MenuItem.maxGutterIconWidth=18
 MenuItem.acceleratorDelimiter=-
 
 #Trees
-Tree.background=444444
+Tree.background=535353
 Tree.foreground=cccccc
 Tree.textForeground=cccccc
-Tree.textBackground=444444
+Tree.textBackground=535353
 #Tree.selectionBackground=BEBEBE
-#Tree.selectionForeground=444444
+#Tree.selectionForeground=535353
 
 #Lists
-List.background=444444
+List.background=535353
 List.foreground=cccccc
 
 #Tables
-Table.background=444444
+Table.background=535353
 Table.foreground=cccccc
-control=444444
-Panel.background=404040
+control=535353
+Panel.background=535353
 Panel.foreground=cccccc
 Menu.selectionBackground=bebebe
-MenuBar.background=444444
-MenuBar.disabledBackground=444444
-MenuBar.shadow=444444
-Menu.background=444444
-MenuItem.background=444444
+MenuBar.background=535353
+MenuBar.disabledBackground=535353
+MenuBar.shadow=535353
+Menu.background=535353
+MenuItem.background=535353
 Menu.foreground=cccccc
 MenuItem.foreground=cccccc
 TabbedPane.tabInsets=0,4,0,4
 ToggleButton.foreground=cccccc
-Separator.background=444444
+Separator.background=535353
 Separator.foreground=888888
 
-Label.background=404040
+Label.background=535353
 Label.foreground=cccccc
 Focus.color=ff0000
 
-TextField.background=444444
+TextField.background=535353
 TextField.foreground=cccccc
 TextField.caretForeground=cccccc
 
-TextArea.background=444444
+TextArea.background=535353
 TextArea.foreground=cccccc
 TextArea.caretForeground=cccccc
 
-TextPane.background=444444
+TextPane.background=535353
 TextPane.foreground=cccccc
 TextPane.caretForeground=cccccc
 
-CheckBox.background=444444
+CheckBox.background=535353
 CheckBox.foreground=cccccc
 RadioButton.foreground=cccccc
 
@@ -58,6 +58,10 @@ StatusBar.top2Color=2c2c2c
 StatusBar.bottomColor=2c2c2c
 
 
+Button.foreground=cccccc
+Button.background=535353
+Button.border=com.intellij.ide.ui.laf.borders.DarculaButtonPainter
+
 MenuItem.acceleratorForeground=cccccc
-PopupMenu.background=444444
-PopupMenu.translucentBackground=444444
+PopupMenu.background=535353
+PopupMenu.translucentBackground=535353
