--- a/plugins/cvs/cvs-plugin/src/META-INF/plugin.xml
+++ b/plugins/cvs/cvs-plugin/src/META-INF/plugin.xml
@@ -2,7 +2,7 @@
   <name>CVS Integration</name>
   <id>CVS</id>
   <version>11</version>
-  <vendor logo="/general/ijLogo.png">JetBrains</vendor>
+  <vendor>JetBrains</vendor>
   <resource-bundle>com.intellij.cvsSupport2.CvsBundle</resource-bundle>
   <category>VCS Integration</category>
 
