--- a/plugins/android-designer/src/META-INF/plugin.xml
+++ b/plugins/android-designer/src/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
   <name>Android Designer</name>
   <id>com.intellij.android-designer</id>
-  <vendor logo="/icons/android.png">JetBrains</vendor>
+  <vendor>JetBrains</vendor>
 
   <resource-bundle>messages.AndroidDesignerBundle</resource-bundle>
 
