--- a/plugins/ant/src/META-INF/plugin.xml
+++ b/plugins/ant/src/META-INF/plugin.xml
@@ -4,7 +4,7 @@
   <version>1.0</version>
   <idea-version min="6.0"/>
   <description>Editing, maintaining and running ANT build scripts inside IntelliJ IDEA.</description>
-  <vendor logo="/general/ijLogo.png">JetBrains</vendor>
+  <vendor>JetBrains</vendor>
 
   <resource-bundle>com.intellij.lang.ant.resources.AntActionsBundle</resource-bundle>
   <depends>com.intellij.properties</depends>
