--- a/plugins/gettext/src/META-INF/plugin.xml
+++ b/plugins/gettext/src/META-INF/plugin.xml
@@ -7,7 +7,7 @@
   <version>1.0</version>
   <idea-version since-build="107.105"/>
 
-  <vendor logo="/general/ijLogo.png">JetBrains</vendor>
+  <vendor>JetBrains</vendor>
   <depends>com.intellij.modules.lang</depends>
 
   <extensions defaultExtensionNs="com.intellij">
