--- a/plugins/github/src/META-INF/plugin.xml
+++ b/plugins/github/src/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" xmlns:xi="http://www.w3.org/2001/XInclude">
   <name>GitHub</name>
   <id>org.jetbrains.plugins.github</id>
-  <vendor logo="/general/ijLogo.png">JetBrains</vendor>
+  <vendor>JetBrains</vendor>
   <description>GitHub integration</description>
 
   <depends>com.intellij.modules.lang</depends>
