--- a/plugins/groovy/src/META-INF/plugin.xml
+++ b/plugins/groovy/src/META-INF/plugin.xml
@@ -19,8 +19,7 @@
   <name>Groovy</name>
   <description>Plugin for Groovy language support, including Groovy++, Grape, Gant and Griffon</description>
   <version>9.0</version>
-  <vendor logo="/icons/groovy/groovy_16x16.png" url="http://www.jetbrains.com">JetBrains Inc.
-  </vendor>
+  <vendor>JetBrains</vendor>
   <depends>com.intellij.properties</depends>
 
   <depends optional="true" config-file="groovy-copyright.xml">com.intellij.copyright</depends>
