--- a/samples/conditionalOperatorConvertor/META-INF/plugin.xml
+++ b/samples/conditionalOperatorConvertor/META-INF/plugin.xml
@@ -5,7 +5,7 @@
         'if' block.
     </description>
     <version>1.3</version>
-    <vendor logo="/general/ijLogo.png">JetBrains</vendor>
+    <vendor>JetBrains</vendor>
    <!--
     <idea-version since-build="2000"/>
     -->
