--- a/samples/vfs/src/META-INF/plugin.xml
+++ b/samples/vfs/src/META-INF/plugin.xml
@@ -9,7 +9,7 @@
   <version>1.0</version>
 
   <!-- Plugin's vendor -->
-  <vendor logo="/general/ijLogo.png">IntelliJ</vendor>
+  <vendor>IntelliJ</vendor>
 
   <!-- Minimum IDEA build number with which the plugin is compatible -->
     <!--
