set scope for 'junit' library to 'test' when it is added to dependencies

--- a/platform/projectModel-impl/src/messages/ProjectBundle.properties
+++ b/platform/projectModel-impl/src/messages/ProjectBundle.properties
@@ -200,7 +200,7 @@ classpath.add.library.action=Library...
 classpath.add.module.dependency.action=Module Dependency...
 classpath.chooser.title.add.module.dependency=Choose Modules
 classpath.chooser.description.add.module.dependency=Select the modules the current module should depend on:
-classpath.title.adding.dependency=Adding dependency
+classpath.title.adding.dependency=Adding Dependency
 classpath.message.library.already.added=Library ''{0}'' already added to this module
 message.no.module.dependency.candidates=Found no modules to depend on
 library.configure.title=Configure Library
