IDEA-91164 Should have an Intention to strongly type groovy variable

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -166,6 +166,8 @@ gr.convert.string.to.char.intention.name=Cast to char
 gr.convert.string.to.char.intention.family.name=Cast to char
 create.field.for.parameter.0 = Create Field for Parameter {0}
 create.field.for.parameter=Create Field for Parameter
+gr.set.strong.type.intention.name=Declare explicit type
+gr.set.strong.type.intention.family.name=Declare explicit type
 remove.unnecessary.escape.characters.intention.name=Remove unnecessary escape characters
 remove.unnecessary.escape.characters.intention.family.name=Remove unnecessary escape characters
 gr.break.string.on.line.breaks.intention.name=Break string on '\\n'
