--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula.properties
@@ -3,54 +3,58 @@ MenuItem.maxGutterIconWidth=18
 MenuItem.acceleratorDelimiter=-
 
 #Trees
-Tree.background=535353
+Tree.background=333333
 Tree.foreground=cccccc
 Tree.textForeground=cccccc
-Tree.textBackground=535353
+Tree.textBackground=333333
 #Tree.selectionBackground=BEBEBE
-#Tree.selectionForeground=535353
+#Tree.selectionForeground=333333
 
 #Lists
-List.background=535353
+List.background=333333
 List.foreground=cccccc
 
 #Tables
-Table.background=535353
+Table.background=333333
 Table.foreground=cccccc
-control=535353
-Panel.background=535353
+control=333333
+Panel.background=333333
 Panel.foreground=cccccc
 Menu.selectionBackground=bebebe
-MenuBar.background=535353
-MenuBar.disabledBackground=535353
-MenuBar.shadow=535353
-Menu.background=535353
-MenuItem.background=535353
+MenuBar.background=333333
+MenuBar.disabledBackground=333333
+MenuBar.shadow=333333
+Menu.background=333333
+MenuItem.background=333333
 Menu.foreground=cccccc
 MenuItem.foreground=cccccc
 TabbedPane.tabInsets=0,4,0,4
 ToggleButton.foreground=cccccc
-Separator.background=535353
+Separator.background=333333
 Separator.foreground=888888
 
-Label.background=535353
+Label.background=333333
 Label.foreground=cccccc
 Focus.color=ff0000
 
-TextField.background=535353
+TextField.background=333333
 TextField.foreground=cccccc
 TextField.caretForeground=cccccc
 
-TextArea.background=535353
+TextArea.background=333333
 TextArea.foreground=cccccc
 TextArea.caretForeground=cccccc
 
-TextPane.background=535353
+TextPane.background=333333
 TextPane.foreground=cccccc
 TextPane.caretForeground=cccccc
 
-CheckBox.background=535353
+CheckBox.background=333333
 CheckBox.foreground=cccccc
+CheckBox.icon=AllIcons.Darcula.Checkbox
+CheckBox.selectedIcon=AllIcons.Darcula.CheckboxSelected
+CheckBoxUI=com.intellij.ide.ui.laf.borders.DarculaCheckBoxUI
+
 RadioButton.foreground=cccccc
 
 StatusBar.topColor=2c2c2c
@@ -59,9 +63,9 @@ StatusBar.bottomColor=2c2c2c
 
 
 Button.foreground=cccccc
-Button.background=535353
+Button.background=333333
 Button.border=com.intellij.ide.ui.laf.borders.DarculaButtonPainter
 
 MenuItem.acceleratorForeground=cccccc
-PopupMenu.background=535353
-PopupMenu.translucentBackground=535353
+PopupMenu.background=333333
+PopupMenu.translucentBackground=333333
