Run/Debug Configuration: layout optimization

--- a/platform/platform-resources-en/src/messages/ExecutionBundle.properties
+++ b/platform/platform-resources-en/src/messages/ExecutionBundle.properties
@@ -277,6 +277,7 @@ show.swing.inspector=&Enable capturing form snapshots
 show.swing.inspector.disabled=&Enable capturing form snapshots (requires JRE 5.0 or higher)
 before.run.property.make=Make
 run.configuration.store.place.option=&Share
+run.configuration.singleton=Single instance allowed
 run.configuration.default.type.description=configuration
 
 #GeneralCommandLine
@@ -284,7 +285,7 @@ run.configuration.error.no.jdk.specified=No JDK specified
 run.configuration.cannot.find.vm.executable=Cannot find VM executable
 
 logs.tab.title=Logs
-before.launch.panel.title=Before Launch
+before.launch.panel.title=Before launch
 before.launch.panel.empty=There are no tasks to run before launch
 before.launch.panel.cyclic_dependency_warning=''{0}'' has already configured to be launched before {1}.\nSuch cyclic dependencies are not allowed.
 before.launch.run.another.configuration=Run Another Configuration
