--- a/platform/platform-resources-en/src/messages/ExecutionBundle.properties
+++ b/platform/platform-resources-en/src/messages/ExecutionBundle.properties
@@ -156,6 +156,7 @@ run.configuration.select.alternate.jre.label=Select Alternative JRE
 run.configuration.select.jre.dir.label=Select directory with JRE to run with
 run.configuration.arguments.help.panel.copy.action.name=Copy
 terminating.process.progress.title=Terminating ''{0}''
+terminating.process.progress.kill=Kill process
 waiting.for.vm.detach.progress.text=Waiting for process detach
 restart.error.message.title=Restart Error
 rerun.configuration.action.name=Rerun ''{0}''
