IDEA-90329 (Constructor with too many parameters shall have an option to be ignored according to its accessesibility)

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1283,6 +1283,7 @@ non.comment.source.statements.problem.descriptor=<code>#ref</code> is too long (
 parameters.per.method.problem.descriptor=<code>#ref()</code> has too many parameters (num parameters = {0}) #loc
 parameters.per.constructor.problem.descriptor=<code>#ref()</code> has too many parameters (num parameters = {0}) #loc
 parameter.limit.option=Parameter limit:
+constructor.visibility.option=Ignore constructors with visibility
 three.negations.per.method.ignore.option=Ignore negations in 'equals()' methods
 three.negations.per.method.ignore.assert.option=Ignore negations in 'assert' statements
 three.negations.per.method.problem.descriptor=<code>#ref</code> contains {0} negations #loc
@@ -1989,3 +1990,7 @@ public.constructor.problem.descriptor=Public constructor <code>#ref()</code>
 public.constructor.quickfix=Replace constructor with factory method
 junit3.style.test.method.in.junit4.class.display.name=Old style JUnit test method in JUnit 4 class
 junit3.style.test.method.in.junit4.class.problem.descriptor=Old style JUnit test method <code>#ref</code> in JUnit 4 class
+none=none
+private=private
+package.local.private=package local & private
+protected.package.local.private=protected, package local & private
