IDEA-91342 Intention 'Remove redundant <expr>.class'

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -174,3 +174,5 @@ gr.break.string.on.line.breaks.intention.name=Break string on '\\n'
 gr.break.string.on.line.breaks.intention.family.name=Break string on '\\n'
 gr.create.missing.switch.branches.intention.name=Create missing 'switch' branches
 gr.create.missing.switch.branches.intention.family.name=Create missing 'switch' branches
+remove.redundant.class.property.intention.name=Remove redundant .class
+remove.redundant.class.property.intention.family.name=Remove redundant .class
