IDEA-91259 'Convert simple getter to property' intention

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -80,7 +80,7 @@ convert.concatenation.to.gstring.intention.family.name=Convert String Concatenat
 convert.concatenation.to.gstring.intention.name=Convert to GString
 convert.closure.to.method.intention.name=Convert to method
 convert.closure.to.method.intention.family.name=Convert property to method
-convert.method.to.closure.intention.name=Convert to property
+convert.method.to.closure.intention.name=Convert to closure property
 convert.method.to.closure.intention.family.name=Convert method to property of closure type
 convert.string.to.multiline.intention.name=Convert to Multiline
 convert.string.to.multiline.intention.family.name=Convert literal to multiline literal
@@ -176,3 +176,5 @@ gr.create.missing.switch.branches.intention.name=Create missing 'switch' branche
 gr.create.missing.switch.branches.intention.family.name=Create missing 'switch' branches
 remove.redundant.class.property.intention.name=Remove redundant .class
 remove.redundant.class.property.intention.family.name=Remove redundant .class
+convert.simple.getter.to.property.intention.name=Convert to property
+convert.simple.getter.to.property.intention.family.name=Convert simple getter to property
