Highlight misplaced reference parameter lists

--- a/java/java-psi-impl/src/messages/JavaErrorMessages.properties
+++ b/java/java-psi-impl/src/messages/JavaErrorMessages.properties
@@ -62,6 +62,8 @@ generics.type.argument.cannot.be.of.primitive.type=Type argument cannot be of pr
 generics.unchecked.assignment=Unchecked assignment: ''{0}'' to ''{1}''
 generics.unchecked.cast=Unchecked cast: ''{0}'' to ''{1}''
 generics.unchecked.call.to.member.of.raw.type=Unchecked call to ''{0}'' as a member of raw type ''{1}''
+generics.diamond.not.applicable=Diamond operator is not applicable for non-parameterized types
+generics.reference.parameters.not.allowed=Reference parameters are not allowed here
 foreach.not.applicable=foreach not applicable to type ''{0}''.
 illegal.to.access.static.member.from.enum.constructor.or.instance.initializer=It is illegal to access static member ''{0}'' from enum constructor or instance initializer
 enum.types.cannot.be.instantiated=Enum types cannot be instantiated
@@ -74,7 +76,7 @@ generics.cannot.catch.type.parameters=Cannot catch type parameters
 generics.cannot.instanceof.type.parameters=Class or array expected
 illegal.generic.type.for.instanceof=Illegal generic type for instanceof
 cannot.select.dot.class.from.type.variable=Cannot select from a type variable
-method.doesnot.override.super=Method does not override method from its superclass
+method.does.not.override.super=Method does not override method from its superclass
 call.to.super.is.not.allowed.in.enum.constructor=Call to super is not allowed in enum constructor
 vararg.not.last.parameter=Vararg parameter must be the last in the list
 modifiers.for.enum.constants=No modifiers allowed for enum constants
