--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1932,6 +1932,7 @@ simplifiable.equals.expression.display.name=Unnecessary 'null' check before 'equ
 simplifiable.equals.expression.problem.descriptor=Unnecessary ''null'' check before ''{0}()'' call #loc
 simplifiable.equals.expression.quickfix=Flip ''.{0}()'' and remove unnecessary ''null'' check
 cast.to.concrete.class.option=Ignore casts to an abstract class type
+cast.to.concrete.class.ignore.equals.option=Ignore in equals()
 instanceof.interfaces.option=Ignore instanceof abstract class
 instance.variable.of.concrete.class.option=Ignore instance fields whose type is an abstract class
 local.variable.of.concrete.class.option=Ignore local variables whose type is an abstract class
