--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1995,3 +1995,6 @@ none=none
 private=private
 package.local.private=package local & private
 protected.package.local.private=protected, package local & private
+non.final.utility.class.display.name=Utility class is not final
+non.final.utility.class.problem.descriptor=Utility class <code>#ref</code> is not final
+0.will.no.longer.be.overridable.by.1={0} will no longer be overridable by {1}
