Groovy: some highlighting for modifiers

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -327,3 +327,5 @@ annotation.attribute.should.have.return.type.declaration=Annotation attribute sh
 interface.members.are.not.allowed.to.be=Interface members are not allowed to be {0}
 abstract.method.cannot.be.final=Abstract method cannot be final
 abstract.methods.must.not.have.body=Abstract methods must not have body
+method.has.incorrect.modifier.volatile=Method has incorrect modifier 'volatile'
+native.methods.cannot.have.body=Native methods cannot have body
