--- a/platform/platform-resources-en/src/messages/ExecutionBundle.properties
+++ b/platform/platform-resources-en/src/messages/ExecutionBundle.properties
@@ -278,7 +278,7 @@ show.swing.inspector=&Enable capturing form snapshots
 show.swing.inspector.disabled=&Enable capturing form snapshots (requires JRE 5.0 or higher)
 before.run.property.make=Make
 run.configuration.store.place.option=&Share
-run.configuration.singleton=Single instance allowed
+run.configuration.singleton=Single instance only
 run.configuration.default.type.description=configuration
 
 #GeneralCommandLine
