--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula.properties
@@ -3,67 +3,69 @@ MenuItem.maxGutterIconWidth=18
 MenuItem.acceleratorDelimiter=-
 
 #Trees
-Tree.background=333333
-Tree.foreground=cccccc
-Tree.textForeground=cccccc
-Tree.textBackground=333333
+Tree.background=535353
+Tree.foreground=eeeeee
+Tree.textForeground=eeeeee
+Tree.textBackground=535353
 #Tree.selectionBackground=BEBEBE
-#Tree.selectionForeground=333333
+#Tree.selectionForeground=535353
 
 #Lists
-List.background=333333
-List.foreground=cccccc
+List.background=535353
+List.foreground=eeeeee
 
 #Tables
-Table.background=333333
-Table.foreground=cccccc
-control=333333
-Panel.background=333333
-Panel.foreground=cccccc
+Table.background=535353
+Table.foreground=eeeeee
+control=535353
+Panel.background=535353
+Panel.foreground=eeeeee
 Menu.selectionBackground=bebebe
-MenuBar.background=333333
-MenuBar.disabledBackground=333333
-MenuBar.shadow=333333
-Menu.background=333333
-MenuItem.background=333333
-Menu.foreground=cccccc
-MenuItem.foreground=cccccc
+MenuBar.background=535353
+MenuBar.disabledBackground=535353
+MenuBar.shadow=535353
+Menu.background=535353
+MenuItem.background=535353
+Menu.foreground=eeeeee
+MenuItem.foreground=eeeeee
 TabbedPane.tabInsets=0,4,0,4
-ToggleButton.foreground=cccccc
-Separator.background=333333
+ToggleButton.foreground=eeeeee
+Separator.background=535353
 Separator.foreground=888888
 
-Label.background=333333
-Label.foreground=cccccc
+Label.background=535353
+Label.foreground=eeeeee
 Focus.color=ff0000
 
-TextField.background=333333
-TextField.foreground=cccccc
-TextField.caretForeground=cccccc
+TextField.background=535353
+TextField.foreground=eeeeee
+TextField.caretForeground=eeeeee
 
-TextArea.background=333333
-TextArea.foreground=cccccc
-TextArea.caretForeground=cccccc
+TextArea.background=535353
+TextArea.foreground=eeeeee
+TextArea.caretForeground=eeeeee
 
-TextPane.background=333333
-TextPane.foreground=cccccc
-TextPane.caretForeground=cccccc
+TextPane.background=535353
+TextPane.foreground=eeeeee
+TextPane.caretForeground=eeeeee
 
-CheckBox.background=333333
-CheckBox.foreground=cccccc
+CheckBox.background=535353
+CheckBox.foreground=eeeeee
 CheckBoxUI=com.intellij.ide.ui.laf.borders.DarculaCheckBoxUI
 
-RadioButton.foreground=cccccc
+RadioButton.foreground=eeeeee
+RadioButton.background=535353
+RadioButtonUI=com.intellij.ide.ui.laf.borders.DarculaRadioButtonUI
 
 StatusBar.topColor=2c2c2c
 StatusBar.top2Color=2c2c2c
 StatusBar.bottomColor=2c2c2c
 
 
-Button.foreground=cccccc
-Button.background=333333
+Button.foreground=eeeeee
+Button.background=535353
 Button.border=com.intellij.ide.ui.laf.borders.DarculaButtonPainter
 
-MenuItem.acceleratorForeground=cccccc
-PopupMenu.background=333333
-PopupMenu.translucentBackground=333333
+MenuItem.acceleratorForeground=eeeeee
+PopupMenu.background=535353
+PopupMenu.translucentBackground=535353
