correct enabling/disabling in TitledSeparator/IdeaTitledBorder/HideableTitledPanel. TitledSeparatorWithMnemonic removed - use TitledSeparator instead.

--- a/plugins/hg4idea/resources/org/zmlx/hg4idea/HgVcsMessages.properties
+++ b/plugins/hg4idea/resources/org/zmlx/hg4idea/HgVcsMessages.properties
@@ -78,7 +78,7 @@ hg4idea.init.error.description=Couldn''t create a Mercurial repository in {0}
 hg4idea.move.progress=Moving files in the VCS...
 
 hg4idea.push.dialog.title=Push
-hg4idea.push.branch=&Branch
+hg4idea.push.branch=&Branch\:
 hg4idea.push.force=&Force push
 
 hg4idea.remove.single.title=Remove file from Mercurial
