fix checkbox and rodiobutton UIs on Windows

--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula.properties
@@ -65,6 +65,7 @@ StatusBar.bottomColor=2c2c2c
 Button.foreground=eeeeee
 Button.background=535353
 Button.border=com.intellij.ide.ui.laf.borders.DarculaButtonPainter
+ButtonUI=com.intellij.ide.ui.laf.borders.DarculaButtonUI
 
 MenuItem.acceleratorForeground=eeeeee
 PopupMenu.background=535353
