IDEA-62095 Unable to import to subversion using "share" - add commit message prefix into the share dialog

--- a/plugins/svn4idea/src/org/jetbrains/idea/svn/SvnBundle.properties
+++ b/plugins/svn4idea/src/org/jetbrains/idea/svn/SvnBundle.properties
@@ -484,7 +484,7 @@ copy.dialog.title=Branch or Tag
 move.dialog.title=Move or Rename
 select.location.invalid.url.message=Invalid Subversion repository URL: ''{0}''
 share.directory.action=Share Directory...
-share.directory.commit.message=Directory ''{0}'' created by {1}
+share.directory.commit.message={2}\nDirectory ''{0}'' created by {1}
 share.directory.title=Share Directory
 share.directory.info.message=To complete share operation commit ''{0}''.
 share.directory.create.dir.progress.text=Creating remote folder {0}
