--- a/platform/platform-resources-en/src/messages/ExecutionBundle.properties
+++ b/platform/platform-resources-en/src/messages/ExecutionBundle.properties
@@ -286,6 +286,8 @@ run.configuration.error.no.jdk.specified=No JDK specified
 run.configuration.cannot.find.vm.executable=Cannot find VM executable
 
 logs.tab.title=Logs
+logs.show.console.on.stdout=Show console when standard out changes
+logs.show.console.on.stderr=Show console when standard error changes
 before.launch.panel.title=Before launch
 before.launch.panel.empty=There are no tasks to run before launch
 before.launch.panel.cyclic_dependency_warning=''{0}'' has already configured to be launched before {1}.\nSuch cyclic dependencies are not allowed.
