IDEA-91574 Darcula on Mac: standard comboboxes look ugly

--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula_windows.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula_windows.properties
@@ -1,12 +1,6 @@
-Button.background=606060
-Button.foreground=cccccc
-
-ComboBox.background=606060
-ComboBox.foreground=cccccc
+ButtonUI=com.intellij.ide.ui.laf.borders.DarculaButtonUI
 
 Tree.line=909090
 Tree.hash=909090
 Tree.collapsedIcon=AllIcons.Darcula.TreeNodeCollapsed
 Tree.expandedIcon=AllIcons.Darcula.TreeNodeExpanded
-
-Menu.selectionBackground=526CA4
