--- a/platform/platform-resources-en/src/messages/VfsBundle.properties
+++ b/platform/platform-resources-en/src/messages/VfsBundle.properties
@@ -5,7 +5,7 @@ file.read.error=Cannot read from file {0}.
 file.write.error=Cannot write to file {0}.
 file.delete.root.error=Cannot delete root file {0}.
 jar.copy.progress=Copying {0}...
-jar.copy.error.message=Cannot copy {0} to {1}.\n{2}.
+jar.copy.error.message=Cannot copy {0} to {1}.\nReason: {2}.
 jar.copy.error.title=Error Copying File
 jar.modification.not.supported.error=Cannot modify jar or zip file {0}
 file.synchronize.progress=Synchronizing files...
