--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -378,6 +378,7 @@ local.variable.hides.member.variable.problem.descriptor=Local variable <code>#re
 local.variable.hides.member.variable.ignore.option=Ignore local variables in static methods
 method.overloads.display.name=Method overloads method of superclass
 method.overloads.problem.descriptor=Method <code>#ref()</code> overloads a compatible method of a superclass, when overriding might have been intended #loc
+method.overloads.report.incompatible.option=Report even if parameter types are not compatible
 method.overrides.private.display.name=Method overrides private method of superclass
 method.overrides.private.display.name.problem.descriptor=Method <code>#ref()</code> overrides a private method of a superclass #loc
 method.overrides.static.display.name=Method overrides static method of superclass
