introduce variable: prefer statements moved to also to registry (IDEA-91267)

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -265,3 +265,4 @@ appcode.in_process_lldb=false
 remote.changelist.management.available=false
 
 python.import.always.ask=false
+introduce.variable.prefer.statements=false
