IDEA-87246 (Add auto-fix to inspection "'protected' member in 'final' class" to make member private.)

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1999,3 +1999,6 @@ protected.package.local.private=protected, package local & private
 non.final.utility.class.display.name=Utility class is not final
 non.final.utility.class.problem.descriptor=Utility class <code>#ref</code> is not final
 0.will.no.longer.be.overridable.by.1={0} will no longer be overridable by {1}
+0.will.have.incompatible.access.privileges.with.super.1={0} will have incompatible access privileges with super {1}
+0.will.no.longer.be.visible.from.overriding.1={0} will no longer be visible from overriding {1}
+make.private.quickfix=Make 'private'
