--- a/platform/platform-resources-en/src/messages/PsiBundle.properties
+++ b/platform/platform-resources-en/src/messages/PsiBundle.properties
@@ -33,6 +33,7 @@ el.value.expected=Value expected
 el.cannot.resolve.function=Cannot resolve function ''{0}'' #loc
 el.cannot.resolve.namespace=Cannot resolve namespace ''{0}'' #loc
 el.cannot.resolve.property=Cannot resolve property or method ''{0}'' (dynamic property?) #loc
+el.cannot.resolve.method=Cannot resolve method ''{0}''() #loc
 el.mismatched.parameters.count=Different number of formal and actual parameters
 el.declare.variable.intention.family=Declare Variable As External Data
 el.declare.variable.via.usebean.intention.name=Declare external variable as <jsp:useBean />
