--- a/java/java-psi-impl/src/messages/JavaErrorMessages.properties
+++ b/java/java-psi-impl/src/messages/JavaErrorMessages.properties
@@ -173,6 +173,7 @@ incompatible.types.html.tooltip=\
 interface.methods.cannot.have.body=Interface methods cannot have body
 abstract.methods.cannot.have.a.body=Abstract methods cannot have a body
 native.methods.cannot.have.a.body=Native methods cannot have a body
+extension.method.in.class=Extension methods can only be used within an interface
 
 instance.method.cannot.override.static.method=Instance method ''{0}'' in ''{1}'' cannot override static method ''{2}'' in ''{3}''
 static.method.cannot.override.instance.method=Static method ''{0}'' in ''{1}'' cannot override instance method ''{2}'' in ''{3}''
