move to darcula package + small fixes

--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula/darcula.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula/darcula.properties
@@ -10,6 +10,11 @@ Tree.textBackground=535353
 #Tree.selectionBackground=BEBEBE
 #Tree.selectionForeground=535353
 
+EditorPane.background=535353
+EditorPane.inactiveBackground=535353
+EditorPane.foreground=eeeeee
+EditorPane.inactiveForeground=eeeeee
+
 #Lists
 List.background=535353
 List.foreground=eeeeee
@@ -51,11 +56,11 @@ TextPane.caretForeground=eeeeee
 
 CheckBox.background=535353
 CheckBox.foreground=eeeeee
-CheckBoxUI=com.intellij.ide.ui.laf.borders.DarculaCheckBoxUI
+CheckBoxUI=com.intellij.ide.ui.laf.darcula.ui.DarculaCheckBoxUI
 
 RadioButton.foreground=eeeeee
 RadioButton.background=535353
-RadioButtonUI=com.intellij.ide.ui.laf.borders.DarculaRadioButtonUI
+RadioButtonUI=com.intellij.ide.ui.laf.darcula.ui.DarculaRadioButtonUI
 
 StatusBar.topColor=2c2c2c
 StatusBar.top2Color=2c2c2c
@@ -64,7 +69,7 @@ StatusBar.bottomColor=2c2c2c
 
 Button.foreground=eeeeee
 Button.background=535353
-Button.border=com.intellij.ide.ui.laf.borders.DarculaButtonPainter
+Button.border=com.intellij.ide.ui.laf.darcula.ui.DarculaButtonPainter
 #ButtonUI=com.intellij.ide.ui.laf.borders.DarculaButtonUI
 
 MenuItem.acceleratorForeground=eeeeee
