--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula/darcula_windows.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula/darcula_windows.properties
@@ -1,4 +1,4 @@
-ButtonUI=com.intellij.ide.ui.laf.borders.DarculaButtonUI
+ButtonUI=com.intellij.ide.ui.laf.darcula.ui.DarculaButtonUI
 
 Tree.line=909090
 Tree.hash=909090
