--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
@@ -89,3 +89,6 @@ local.var.0.is.reassigned.in.closure=Local variable {0} is reassigned in {1} wit
 anonymous.class=anonymous class
 closure=closure
 other.scope=Other scope
+method.may.be.static=Method may be static
+method.may.be.static.only.private.or.final.option=Only check final or private methods
+method.may.be.static.ignore.empty.method.option=Ignore empty methods
