IDEA-63872 Show modified directories with special icons or colors

--- a/platform/platform-resources-en/src/messages/VcsBundle.properties
+++ b/platform/platform-resources-en/src/messages/VcsBundle.properties
@@ -569,3 +569,5 @@ paths.affected.in.revision=Paths Affected in Revision {0}
 
 #Dir diff
 refresh.failed.message=Refresh failed: {0}
+file.status.name.up.to.date.immediate.children=Have immediate changed children
+file.status.name.up.to.date.recursive.children=Have changed descendants
