Run Configurations: better text in restart confirmation.

--- a/platform/platform-resources-en/src/messages/ExecutionBundle.properties
+++ b/platform/platform-resources-en/src/messages/ExecutionBundle.properties
@@ -160,7 +160,7 @@ terminating.process.progress.kill=Kill process
 waiting.for.vm.detach.progress.text=Waiting for process detach
 restart.error.message.title=Restart Error
 rerun.configuration.action.name=Rerun ''{0}''
-rerun.confirmation.message=''{0}'' is single-instance run configuration.\nAre you sure you want to stop it?
+rerun.confirmation.message=''{0}'' is single-instance run configuration.\nAre you sure you want to stop running one?
 rerun.confirmation.title=Stop Confirmation
 rerun.confirmation.checkbox=Confirm rerun with process termination
 run.configuration.dump.threads.action.name=Dump Threads
