--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -266,3 +266,4 @@ remote.changelist.management.available=false
 
 python.import.always.ask=false
 introduce.variable.prefer.statements=false
+show.method.base.class.in.java.file.structure=false
