editor pane and new check box

--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula/darcula.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula/darcula.properties
@@ -1,3 +1,5 @@
+text=eeeeee
+
 Menu.maxGutterIconWidth=18
 MenuItem.maxGutterIconWidth=18
 MenuItem.acceleratorDelimiter=-
@@ -14,6 +16,7 @@ EditorPane.background=535353
 EditorPane.inactiveBackground=535353
 EditorPane.foreground=eeeeee
 EditorPane.inactiveForeground=eeeeee
+EditorPaneUI=com.intellij.ide.ui.laf.darcula.ui.DarculaEditorPaneUI
 
 #Lists
 List.background=535353
@@ -65,7 +68,6 @@ RadioButtonUI=com.intellij.ide.ui.laf.darcula.ui.DarculaRadioButtonUI
 StatusBar.topColor=2c2c2c
 StatusBar.top2Color=2c2c2c
 StatusBar.bottomColor=2c2c2c
-
 
 Button.foreground=eeeeee
 Button.background=535353
